--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://img.icons8.com/plasticine/2x/apple-weather.png" />
+    <link rel="icon" href="https://img.icons8.com/plasticine/2x/apple-weather.png?v1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property='og:description' content="This is my personal Weather-App, is a minimalist app in this app you can search your city's weather when you find your city this appears on a card on your screen." />
