--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="https://img.icons8.com/plasticine/2x/apple-weather.png?v1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="https://github.com/IamCocoDev/Weather-App">
     <meta property="og:title" content="Weather-App IamCocoDev" />
     <meta property='og:description' content="This is my personal Weather-App, is a minimalist app in this app you can search your city's weather when you find your city this appears on a card on your screen." />
     <meta property="og:image" content="https://store-images.s-microsoft.com/image/apps.1299.9007199266242681.539dcf60-5777-4338-aecf-6d83761df4f9.63351064-9b87-4927-9391-23f07baad874?mode=scale&q=90&h=300&w=300">
